--- a/angular/src/app/game-component/game-component.component.html
+++ b/angular/src/app/game-component/game-component.component.html
@@ -8,8 +8,8 @@
     </div>
   </div>
 
-  <div class="row">
-    <div class="alert alert-danger">{{this.notification}}</div>
+  <div class="row" *ngIf="notification !== ''">
+    <div class="alert alert-danger">{{notification}}</div>
   </div>
   <div class="row">
     <div class="col-md-12">
