--- a/angular/src/app/game-component/game-component.component.html
+++ b/angular/src/app/game-component/game-component.component.html
@@ -9,7 +9,7 @@
   </div>
 
   <div class="row" *ngIf="notification !== ''">
-    <div class="alert alert-danger">{{notification}}</div>
+    <div class="alert">{{notification}}</div>
   </div>
   <div class="row">
     <div class="col-md-12">
